--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ cloudinary==1.39.0
 colorama==0.4.6
 configparser==6.0.1
 firebase==4.0.1
-Flask==3.0.2
+
 Flask-Bcrypt==1.0.1
 Flask-Cors==4.0.0
 Flask-JWT-Extended==4.6.0
@@ -49,6 +49,7 @@ typing_extensions==4.9.0
 tzdata==2024.1
 tzlocal==5.2
 urllib3==2.2.1
+Flask>=2.0.0,<3.0.0
 Werkzeug==2.2.2
 WTForms==3.1.2
 XlsxWriter==3.2.0
